--- a/public/thankyou-deposit.html
+++ b/public/thankyou-deposit.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Deposit Confirmation</title>
+  <title>Deposit Hold Confirmation</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
@@ -12,11 +12,9 @@
       color: #1a1a1a;
       margin: 0;
       padding: 0;
+      overflow-x: hidden;
     }
-    .fade-in {
-      animation: fadeIn 1.2s ease forwards;
-      opacity: 0;
-    }
+    .fade-in { animation: fadeIn 1.2s ease forwards; opacity: 0; }
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
@@ -24,7 +22,7 @@
   </style>
 </head>
 <body>
-  <div class="flex justify-center items-center min-h-screen px-4 py-8">
+  <div class="flex justify-center items-center min-h-screen px-4 py-[20px]">
     <div class="bg-white rounded-2xl shadow-lg p-8 w-full max-w-md text-center fade-in">
       <!-- Logo -->
       <div class="flex justify-center mb-6">
@@ -32,28 +30,28 @@
              alt="Equine Transport UK Logo" class="h-16 object-contain" />
       </div>
 
-      <!-- Title -->
       <h1 class="text-2xl font-bold text-gray-800 mb-4">
-        Deposit Payment Successful!
+        Deposit Hold Confirmed
       </h1>
       <p class="text-gray-600 mb-6">
-        Your deposit has been successfully received. Please review your booking details below.
+        Thank you. Your deposit hold has been successfully placed.
       </p>
 
-      <!-- Booking Info -->
       <div id="bookingCard" class="text-left space-y-2 mb-6 bg-gray-50 p-4 rounded-xl border border-gray-200">
         <p id="bookingID" class="font-semibold text-gray-700"></p>
         <p id="customerName"></p>
         <p id="resourceName"></p>
         <p id="startDate"></p>
         <p id="endDate"></p>
-        <p id="depositAmount" class="text-green-700 font-semibold"></p>
       </div>
 
-      <!-- Loading message -->
-      <div id="loading" class="mt-6 text-gray-500 text-sm hidden">Loading booking details...</div>
+      <div class="text-left bg-blue-50 border border-blue-200 rounded-xl p-4 space-y-2">
+        <p id="depositAmount" class="font-medium text-gray-800"></p>
+        <p class="text-sm text-gray-600">Funds remain reserved until the vehicle is returned.</p>
+      </div>
 
-      <!-- Footer -->
+      <div id="loading" class="mt-6 text-gray-500 text-sm hidden">Loading deposit details...</div>
+
       <div class="mt-8 text-sm text-gray-500">
         <p><strong>Equine Transport UK</strong></p>
         <p>Upper Broadreed Farm, Stonehurst Lane, Five Ashes, TN20 6LL</p>
@@ -63,67 +61,53 @@
   </div>
 
   <script>
-    (function () {
-      // --- Get query parameters ---
-      const params = new URLSearchParams(window.location.search);
-      const bookingID = params.get("bookingID") || "N/A";
-      const amount = params.get("amount") ? (parseInt(params.get("amount")) / 100).toFixed(2) : "0.00";
+  (function () {
+    const params = new URLSearchParams(window.location.search);
+    const bookingID = params.get("bookingID") || "N/A";
 
-      // --- DOM elements ---
-      const bookingIDEl = document.getElementById("bookingID");
-      const customerName = document.getElementById("customerName");
-      const resourceName = document.getElementById("resourceName");
-      const startDate = document.getElementById("startDate");
-      const endDate = document.getElementById("endDate");
-      const depositAmount = document.getElementById("depositAmount");
-      const loading = document.getElementById("loading");
+    const bookingIDEl = document.getElementById("bookingID");
+    const customerName = document.getElementById("customerName");
+    const resourceName = document.getElementById("resourceName");
+    const startDate = document.getElementById("startDate");
+    const endDate = document.getElementById("endDate");
+    const totalAmount = document.getElementById("totalAmount");
+    const paidAmount = document.getElementById("paidAmount");
+    const balanceAmount = document.getElementById("balanceAmount");
+    const loading = document.getElementById("loading");
 
-      bookingIDEl.textContent = `Booking ID: ${bookingID}`;
-      depositAmount.textContent = `Deposit: £${amount}`;
+    bookingIDEl.textContent = `Booking ID: ${bookingID}`;
+    document.getElementById("thankTitle").textContent = "Thank you for your deposit!";
 
-      if (bookingID !== "N/A") {
-        loading.classList.remove("hidden");
+    if (bookingID !== "N/A") {
+      loading.classList.remove("hidden");
 
-        fetch(`https://rental-backend-0kz1.onrender.com/terminal/list/${bookingID}`)
-          .then((res) => res.json())
-          .then((data) => {
-            loading.classList.add("hidden");
+      fetch(`https://rental-backend-0kz1.onrender.com/bookingpayments/list/${bookingID}`)
+        .then((res) => res.json())
+        .then((data) => {
+          loading.classList.add("hidden");
+          if (data && data.customer) {
+            customerName.textContent = `Name: ${data.customer}`;
+            resourceName.textContent = `Vehicle: ${data.resource}`;
+            startDate.textContent = `Start Date: ${data.start}`;
+            endDate.textContent = `End Date: ${data.end}`;
+            totalAmount.textContent = `Total: £${parseFloat(data.total || 0).toFixed(2)}`;
+            paidAmount.textContent = `Paid: £${parseFloat(data.paid || 0).toFixed(2)}`;
+            balanceAmount.textContent = `Balance Due: £${parseFloat(data.balance || 0).toFixed(2)}`;
+          } else {
+            customerName.textContent = "Booking details unavailable.";
+          }
+        })
+        .catch((err) => {
+          console.error("Fetch error:", err);
+          loading.classList.add("hidden");
+          customerName.textContent = "Error loading booking details.";
+        });
+    } else {
+      customerName.textContent = "Invalid booking reference.";
+    }
+  })();
+</script>
 
-            if (data && data.length > 0) {
-              const booking = data[0];
-              customerName.textContent = `Name: ${booking.customer || "Unknown"}`;
-              resourceName.textContent = `Vehicle: ${booking.name || "Unknown"}`;
-              startDate.textContent = `Start Date: ${booking.start || "-"}`;
-              endDate.textContent = `End Date: ${booking.end || "-"}`;
-            } else {
-              customerName.textContent = "Booking details unavailable.";
-            }
-
-            postHeight(); // adjust iframe height once loaded
-          })
-          .catch((err) => {
-            console.error("Fetch error:", err);
-            loading.classList.add("hidden");
-            customerName.textContent = "Error loading booking details.";
-            postHeight();
-          });
-      } else {
-        customerName.textContent = "Invalid booking reference.";
-        postHeight();
-      }
-
-      // --- Auto-resize for Wix ---
-      function postHeight() {
-        const height = document.body.scrollHeight;
-        window.parent.postMessage({ type: "resize", height }, "*");
-      }
-
-      window.onload = postHeight;
-      window.addEventListener("resize", postHeight);
-      setTimeout(postHeight, 1500);
-      setTimeout(postHeight, 3000);
-    })();
-  </script>
 </body>
 </html>
 
