--- a/public/thankyou-deposit.html
+++ b/public/thankyou-deposit.html
@@ -14,22 +14,28 @@
       padding: 0;
       overflow-x: hidden;
     }
-    .fade-in { animation: fadeIn 1.2s ease forwards; opacity: 0; }
+    .fade-in {
+      animation: fadeIn 1.2s ease forwards;
+      opacity: 0;
+    }
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
+
 <body>
   <div class="flex justify-center items-center min-h-screen px-4 py-[20px]">
     <div class="bg-white rounded-2xl shadow-lg p-8 w-full max-w-md text-center fade-in">
+
       <!-- Logo -->
       <div class="flex justify-center mb-6">
         <img src="https://planyo-ch.s3.eu-central-2.amazonaws.com/site_logo_68785.png?v=90715"
              alt="Equine Transport UK Logo" class="h-16 object-contain" />
       </div>
 
+      <!-- Title -->
       <h1 class="text-2xl font-bold text-gray-800 mb-4">
         Deposit Hold Confirmed
       </h1>
@@ -37,21 +43,30 @@
         Thank you. Your deposit hold has been successfully placed.
       </p>
 
+      <!-- Booking Details -->
       <div id="bookingCard" class="text-left space-y-2 mb-6 bg-gray-50 p-4 rounded-xl border border-gray-200">
         <p id="bookingID" class="font-semibold text-gray-700"></p>
         <p id="customerName"></p>
         <p id="resourceName"></p>
         <p id="startDate"></p>
         <p id="endDate"></p>
+        <p id="totalAmount"></p>
       </div>
 
+      <!-- Deposit Details -->
       <div class="text-left bg-blue-50 border border-blue-200 rounded-xl p-4 space-y-2">
-        <p id="depositAmount" class="font-medium text-gray-800"></p>
-        <p class="text-sm text-gray-600">Funds remain reserved until the vehicle is returned.</p>
+        <p id="depositAmount" class="font-semibold text-gray-800 text-lg"></p>
+        <p class="text-sm text-gray-600">
+          Funds remain reserved until the vehicle is returned.
+        </p>
       </div>
 
-      <div id="loading" class="mt-6 text-gray-500 text-sm hidden">Loading deposit details...</div>
+      <!-- Loading -->
+      <div id="loading" class="mt-6 text-gray-500 text-sm hidden">
+        Loading deposit details...
+      </div>
 
+      <!-- Footer -->
       <div class="mt-8 text-sm text-gray-500">
         <p><strong>Equine Transport UK</strong></p>
         <p>Upper Broadreed Farm, Stonehurst Lane, Five Ashes, TN20 6LL</p>
@@ -71,12 +86,10 @@
     const startDate = document.getElementById("startDate");
     const endDate = document.getElementById("endDate");
     const totalAmount = document.getElementById("totalAmount");
-    const paidAmount = document.getElementById("paidAmount");
-    const balanceAmount = document.getElementById("balanceAmount");
+    const depositAmount = document.getElementById("depositAmount");
     const loading = document.getElementById("loading");
 
     bookingIDEl.textContent = `Booking ID: ${bookingID}`;
-    document.getElementById("thankTitle").textContent = "Thank you for your deposit!";
 
     if (bookingID !== "N/A") {
       loading.classList.remove("hidden");
@@ -85,14 +98,14 @@
         .then((res) => res.json())
         .then((data) => {
           loading.classList.add("hidden");
+
           if (data && data.customer) {
             customerName.textContent = `Name: ${data.customer}`;
             resourceName.textContent = `Vehicle: ${data.resource}`;
             startDate.textContent = `Start Date: ${data.start}`;
             endDate.textContent = `End Date: ${data.end}`;
             totalAmount.textContent = `Total: £${parseFloat(data.total || 0).toFixed(2)}`;
-            paidAmount.textContent = `Paid: £${parseFloat(data.paid || 0).toFixed(2)}`;
-            balanceAmount.textContent = `Balance Due: £${parseFloat(data.balance || 0).toFixed(2)}`;
+            depositAmount.textContent = `Deposit Hold: £${parseFloat(data.deposit || 0).toFixed(2)}`;
           } else {
             customerName.textContent = "Booking details unavailable.";
           }
@@ -106,8 +119,7 @@
       customerName.textContent = "Invalid booking reference.";
     }
   })();
-</script>
-
+  </script>
 </body>
 </html>
 
