--- a/public/thankyou-deposit.html
+++ b/public/thankyou-deposit.html
@@ -22,7 +22,7 @@
   </style>
 </head>
 <body>
-  <div class="flex justify-center items-center min-h-screen px-4 py-8">
+  <div class="flex justify-center items-center min-h-screen px-4 py-[20px]">
     <div class="bg-white rounded-2xl shadow-lg p-8 w-full max-w-md text-center fade-in">
       <!-- Logo -->
       <div class="flex justify-center mb-6">
